# AI-Visibility-SaaS

./: .gitignore  404.html  API_CONTRACTS.md  ARCHITECTURE.md  CONTRIBUTORS.md  DATA_MODEL.md  DECISIONS.md  MODEL_PROVIDER_NOTES.md  OPS_RUNBOOK.md  PRD.md  PROMPTING_EVALS.md  README.md  SECURITY_PRIVACY_COMPLIANCE.md  ai-visibility-saas-plan(Pawan).md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: deploy-docs.yml
API_CONTRACTS/: index.html
ARCHITECTURE/: index.html
CONTRIBUTORS/: index.html
DATA_MODEL/: index.html
DECISIONS/: index.html
MODEL_PROVIDER_NOTES/: index.html
OPS_RUNBOOK/: index.html
PRD/: index.html
PROMPTING_EVALS/: index.html
SECURITY_PRIVACY_COMPLIANCE/: index.html
search/: search_index.json
services/py/: .env.example  Dockerfile  README.md  docker-compose.yml  providers_registry.yaml  pyproject.toml
services/py/app/: config.py  dependencies.py  llm_fallback.py  main.py
services/py/app/api/: middleware.py  routes.py
services/py/app/graph/: state.py
services/py/app/models/: agents.py  analysis.py  confidence.py
services/py/tests/: conftest.py
